syntax = "proto3";

package user;

option go_package="local/fin/protos";

service UserInfo {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUser(ListUserRequest) returns (ListUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message UserModel {
  uint64 id = 1;
  string email = 2;
  string user_name = 3;
  string password = 4;
  uint64 age = 5;
  string phone = 6;
  string address = 7;
}

message UserForm {
  string email = 1;
  string user_name = 2;
  string password = 3;
  uint64 age = 4;
  string phone = 5;
  string address = 6;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserResponse {
  UserModel user = 1;
}


message ListUserRequest {
}

message ListUserResponse {
  repeated UserModel users = 1;
}


message CreateUserRequest {
  UserForm user = 1;
}

message CreateUserResponse {
  string response = 1;
}


// message UpdateUserRequest {
//   uint64 id = 1;
//   UserForm user = 2;
// }

// message UpdateUserResponse {
//   string response = 1;
// }


message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  string response = 1;
}